.github/scripts/tests/fixtures/ci-manifest-binding/pass/skills-cross-resolves-clean/.github/scripts/validate-foo.py
#!/usr/bin/env python3
"""Fixture stub — validate-foo.py. Referenced by CI-997 in the
manifest AND cited in SKILL.md. All four checks (1 + 2 + 3 + 4) clean."""
