.github/scripts/tests/fixtures/ci-manifest-binding/fail/skills-annotation-orphan/.github/scripts/validate-foo.py
#!/usr/bin/env python3
"""Fixture stub — validate-foo.py. Referenced by TEST-ACTIVE-001 in
validators-manifest.yaml. Present on disk to satisfy check 2 so check 1
fires in isolation against the SKILL.md orphan citation."""
